methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:12: error: ':' expected but ')' found.
def isFacingTrail(trak):Boolean = {
                      ^SlugSnail:20: error: identifier expected but '}' found.
}
^